--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,51 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<%- include('./partials/header')%>
+<%- include('./search')%>
+<div class="card2">
+    <div class="card-body tb">
+        <div class="table">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">String</th>
+                        <th scope="col">Integer</th>
+                        <th scope="col">Float</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Boolean</th>
+                        <th scope="col">Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                        <td>@mdo</td>
+                        <td>@mdo</td>
+                        <td>@mdo</td>
+                        <td>@mdo</td>
+                    </tr>
+                </tbody>
+            </table>
+            <!-- end table -->
+
+            <!-- pagination -->
+            <nav aria-label="Page navigation example mt-2">
+                <ul class="pagination">
+                    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                </ul>
+            </nav>
+            <!-- end pagination -->
+
+            <div class="add">
+                <a class="btn btn-primary" href="#" role="button" data-toggle="modal" data-target="#addModal">Add</a>
+            </div>
+
+        </div>
+    </div>
+</div>
+<%- include('./partials/footer')%>
