--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,13 +17,16 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Mark</td>
+                        <td>1</td>
                         <td>Otto</td>
                         <td>@mdo</td>
                         <td>@mdo</td>
                         <td>@mdo</td>
                         <td>@mdo</td>
-                        <td>@mdo</td>
+                        <td>
+                            <a href="#" class="btn btn-success">Edit</a>
+                            <a href="#" class="btn btn-danger">Delete</a>
+                        </td>
                     </tr>
                 </tbody>
             </table>
@@ -42,7 +45,7 @@
             <!-- end pagination -->
 
             <div class="add">
-                <a class="btn btn-primary" href="#" role="button" data-toggle="modal" data-target="#addModal">Add</a>
+                <a class="btn btn-primary" href="/add" role="button" data-toggle="modal" data-target="#addModal">Add</a>
             </div>
 
         </div>
