--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -50,6 +50,25 @@
             padding-top: 15px;
             padding-bottom: -5px;
         }
+
+        .edit{
+            margin-top: 30px;
+            color: #404E67;
+            background: #F5F7FA;
+            padding: 30px;
+        }
+        .table-wrapper {
+            width: 100%;
+            margin: auto;
+            background: #fff;
+            padding: 50px;
+            box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.3);
+            border-radius: 20px;
+        }
+        .back {
+            float: right;
+            padding-bottom: 10px;
+        }
     </style>
 </head>
 
