--- a/views/add.ejs
+++ b/views/add.ejs
@@ -6,31 +6,31 @@
         <div class="form-group row">
           <label class="col-sm-2 col-form-label">String</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" name="string" placeholder="String">
+            <input type="text" class="form-control" name="string" id="string" placeholder="String">
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-2 col-form-label">Integer</label>
           <div class="col-sm-10">
-            <input type="number" class="form-control" name="integer" placeholder="Integer">
+            <input type="number" class="form-control" name="integer" id="integer" placeholder="Integer">
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-2 col-form-label">Float</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" name="float" placeholder="Float">
+            <input type="text" class="form-control" name="float" id="float" placeholder="Float">
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-2 col-form-label">Date</label>
           <div class="col-sm-10">
-            <input type="date" class="form-control" name="date" placeholder="end date">
+            <input type="date" class="form-control" name="date"m id="date" placeholder="end date">
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-2 col-form-label">Boolean</label>
           <div class="col-sm-10">
-            <select name="boolean" class="custom-select mr-sm-2">
+            <select name="boolean" id="boolean" class="custom-select mr-sm-2">
               <option selected disabled>Choose the boolean...</option>
               <option value="true">True</option>
               <option value="false">False</option>
@@ -40,13 +40,13 @@
 
         <div class="form-group row">
           <div class="col-sm-10">
-            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="submit" name="bread_id" class="btn btn-primary">Save</button>
           </div>
         </div>
       </form>
 
       <div class="back">
-        <a href="/" class="btn btn-success">kembali</a>
+        <a href="/" class="btn btn-success">Back</a>
       </div>
 
     </div>
